--- a/src/index.html
+++ b/src/index.html
@@ -2,22 +2,33 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/public/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
+    <title>Yachts</title>
     <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
   </head>
   <body>
-    <load ="partials/header.html" />
 
-    <section>
-      <h1>Example page title</h1>
-      <!-- Path to images as from index.html file -->
-      <img src="./img/javascript.svg" alt="" />
-    </section>
+    <load src="partials/header.html" />
 
-    <!-- Loads the specified .html file -->
-    <load ="partials/vite-promo.html" />
+    <main>
+      <load src="partials/hero.html" />
+      <load src="partials/about-us.html" />
+      <load src="partials/our-yachts.html" />
+      <load src="partials/advantages.html" />
+      <load src="partials/rent-a-yacht.html" />
+      <load src="partials/reviews.html" />
+    </main>
+
+    <load src="partials/footer.html" />
+
+   
+
+    
+  
 
     <script type="module" src="./main.js"></script>
   </body>
